--- a/dev/scss/global/_keyframes.scss
+++ b/dev/scss/global/_keyframes.scss
@@ -1,13 +1,7 @@
 //navigation button
 @-webkit-keyframes fade-up-btn {
-	0%{margin-top: 50px;opacity: 0;}
-	48% {margin-top: 50px;}
-	100% {margin-top: 0;opacity: 1;}
-}
-
-@keyframes fade-up-btn {
-	0%{margin-top: 50px;opacity: 0;}
-	48% {margin-top: 50px;}
+	0%{margin-top: getvwmob(50vw);opacity: 0;}
+	48% {margin-top: getvwmob(50vw);}
 	100% {margin-top: 0;opacity: 1;}
 }
 
@@ -19,25 +13,14 @@
 	100% {background-color: #fff;}
 }
 
-@keyframes backgroundBtn{
-	0%{background-color: $black;}
-	40% {background-color: $dark-gray;}
-	80% {background-color: #fff;}
-	100% {background-color: #fff;}
+// Keyframes De entrada
+@-webkit-keyframes fade-up{
+	0% {transform:translateY(getvwmob(26vw)); opacity: 0}
+	100% {opacity: 1}
 }
 
-// Keyframes De entrada
-// fade Up
-@-webkit-keyframes fade-up{
-	0% {transform:translateY(26px); opacity: 0}
-	100% {opacity: 1}
-}
-@keyframes fade-Up {
-	0% {transform:translateY(26px); opacity: 0}
-	100% {opacity: 1}
-}
 @-webkit-keyframes fade-right{
-	0% {transform:translateX(-30px);}
+	0% {transform:translateX(getvwmob(-30vw));}
 	100% {transform:translateX(0);opacity: 1}
 }
 
@@ -63,37 +46,20 @@
 }
 
 
-
-
 // keyframes hover
 //up box translate
 @-webkit-keyframes translate-up{
-	0% {transform:translateY(26px); opacity: 0}
-	100% {opacity: 1; animation-fill-mode:forwards;}
-}
-@keyframes translate-up {
-	0% {transform:translateY(26px); opacity: 0}
+	0% {transform:translateY(getvwmob(26vw)); opacity: 0}
 	100% {opacity: 1; animation-fill-mode:forwards;}
 }
 //right box translate
 @-webkit-keyframes translate-right {
-	0% {transform:translateX(-30px);}
+	0% {transform:translateX(getvwmob(-30px));}
 	100% {transform:translateX(0);opacity: 1}
 }
-
-@keyframes translate-right {
-	0% {transform:translateX(-30px); opacity: .01}
-	100% {transform:translateX(0);opacity: 1}
-}
-
 //left box translate
 @-webkit-keyframes translate-left {
-	0% {transform:translateX(30px);}
-	100% {opacity: 1}
-}
-
-@keyframes translate-left {
-	0% {transform:translateX(30px); opacity: .01}
+	0% {transform:translateX(getvwmob(30vw));}
 	100% {opacity: 1}
 }
 
@@ -108,13 +74,14 @@
 	100% {opacity: 1}
 }
 
+// display text
 @keyframes display-text{
 	0%{
 		opacity: 1;
 	}
 	30%,70%{
 		opacity: 0;
-		transform: translateY(26px);
+		transform: translateY(getvwmob(26vw));
 		animation-delay: 800ms;
 	}
 	100%{
@@ -122,6 +89,7 @@
 		transform: translateY(0);
 	}
 }
+
 // lines
 @-webkit-keyframes line-fill {
 	0% {transform: scaleY(0) rotate(90deg); opacity:0;}
@@ -132,85 +100,111 @@
 // 	100% {transform: scaleX(.4);}
 // }
 
+
+// =====media queries 768px=====
 @media(min-width: 768px){
+
+	// navigation button
+	@-webkit-keyframes fade-up-btn {
+		0%{margin-top: 50px;opacity: 0;}
+		48% {margin-top: 50px;}
+		100% {margin-top: 0;opacity: 1;}
+	}
+
+	// keyframes de entrada
+	@-webkit-keyframes fade-up{
+		0% {transform:translateY(26px); opacity: 0}
+		100% {opacity: 1}
+	}
+	@-webkit-keyframes fade-right{
+		0% {transform:translateX(-30px);}
+		100% {transform:translateX(0);opacity: 1}
+	}
+
+	// keyframes hover
+	@-webkit-keyframes translate-up{
+		0% {transform:translateY(26px); opacity: 0}
+		100% {opacity: 1; animation-fill-mode:forwards;}
+	}
+	@-webkit-keyframes translate-right {
+		0% {transform:translateX(-30px);}
+		100% {transform:translateX(0);opacity: 1}
+	}
+	@-webkit-keyframes translate-left {
+		0% {transform:translateX(30px);}
+		100% {opacity: 1}
+	}
+	@keyframes display-text{
+		0%{
+			opacity: 1;
+		}
+		30%,70%{
+			opacity: 0;
+			transform: translateY(26px);
+			animation-delay: 800ms;
+		}
+		100%{
+			opacity: 1;
+			transform: translateY(0);
+		}
+	}
+}
+// =====media queries 992px=====
+@media(min-width: 992px){
 	@-webkit-keyframes line-fill {
 		0% {transform: scaleX(0); opacity:0;}
 		100% {transform: scaleX(1);opacity:1;}
 	}
+
 }
-// @media(min-width: 1282px){
-// 		//navigation button
-// 	@-webkit-keyframes fade-up-btn {
-// 		0%{margin-top: getvw(50vw);opacity: 0;}
-// 		48% {margin-top: getvw(50vw);}
-// 		100% {margin-top: 0;opacity: 1;}
-// 	}
 
-// 	@keyframes fade-up-btn {
-// 		0%{margin-top: getvw(50vw);opacity: 0;}
-// 		48% {margin-top: getvw(50vw);}
-// 		100% {margin-top: 0;opacity: 1;}
-// 	}
 
-// 	// Keyframes De entrada
-// 	// fade Up
-// 	@-webkit-keyframes fade-up{
-// 		0% {transform:translateY(getvw(26vw)); opacity: 0}
-// 		100% {opacity: 1}
-// 	}
-// 	@keyframes fade-Up {
-// 		0% {transform:translateY(getvw(26vw)); opacity: 0}
-// 		100% {opacity: 1}
-// 	}
-// 	@-webkit-keyframes fade-right{
-// 		0% {transform:translateX(getvw(-30vw));}
-// 		100% {transform:translateX(0);opacity: 1}
-// 	}
+// =====media queries 1282px=====
+@media(min-width: 1282px){
 
-// 	// keyframes hover
-// 	//up box translate
-// 	@-webkit-keyframes translate-up{
-// 		0% {transform:translateY(getvw(26vw)); opacity: 0}
-// 		100% {opacity: 1; animation-fill-mode:forwards;}
-// 	}
-// 	@keyframes translate-up {
-// 		0% {transform:translateY(getvw(26vw)); opacity: 0}
-// 		100% {opacity: 1; animation-fill-mode:forwards;}
-// 	}
-// 	//right box translate
-// 	@-webkit-keyframes translate-right {
-// 		0% {transform:translateX(getvw(-30vw));}
-// 		100% {transform:translateX(0);opacity: 1}
-// 	}
+	//navigation button
+	@-webkit-keyframes fade-up-btn {
+		0%{margin-top: getvw(50vw);opacity: 0;}
+		48% {margin-top: getvw(50vw);}
+		100% {margin-top: 0;opacity: 1;}
+	}
 
-// 	@keyframes translate-right {
-// 		0% {transform:translateX(getvw(-30vw)); opacity: .01}
-// 		100% {transform:translateX(0);opacity: 1}
-// 	}
+	// Keyframes De entrada
+	@-webkit-keyframes fade-up{
+		0% {transform:translateY(getvw(26vw)); opacity: 0}
+		100% {opacity: 1}
+	}
+	@-webkit-keyframes fade-right{
+		0% {transform:translateX(getvw(-30vw));}
+		100% {transform:translateX(0);opacity: 1}
+	}
 
-// 	//left box translate
-// 	@-webkit-keyframes translate-left {
-// 		0% {transform:translateX(getvw(30vw));}
-// 		100% {opacity: 1}
-// 	}
+	// keyframes hover
+	@-webkit-keyframes translate-up{
+		0% {transform:translateY(getvw(26vw)); opacity: 0}
+		100% {opacity: 1; animation-fill-mode:forwards;}
+	}
+	@-webkit-keyframes translate-right {
+		0% {transform:translateX(getvw(-30vw));}
+		100% {transform:translateX(0);opacity: 1}
+	}
+	@-webkit-keyframes translate-left {
+		0% {transform:translateX(getvw(30vw));}
+		100% {opacity: 1}
+	}
 
-// 	@keyframes translate-left {
-// 		0% {transform:translateX(getvw(30vw)); opacity: .01}
-// 		100% {opacity: 1}
-// 	}
-
-// 	@keyframes display-text{
-// 		0%{
-// 			opacity: 1;
-// 		}
-// 		30%,70%{
-// 			opacity: 0;
-// 			transform: translateY(getvw(26vw));
-// 			animation-delay: 800ms;
-// 		}
-// 		100%{
-// 			opacity: 1;
-// 			transform: translateY(0);
-// 		}
-// 	}
-// }
+	@keyframes display-text{
+		0%{
+			opacity: 1;
+		}
+		30%,70%{
+			opacity: 0;
+			transform: translateY(getvw(26vw));
+			animation-delay: 800ms;
+		}
+		100%{
+			opacity: 1;
+			transform: translateY(0);
+		}
+	}
+}
