--- a/dev/scss/global/_default.scss
+++ b/dev/scss/global/_default.scss
@@ -5,10 +5,13 @@
 
 body{
 	color: $black;
-	font-size: 12px;
-	// @media(min-width: 1282px){
-	// 	font-size: getvw(12vw);
-	// }
+	font-size: getvwmob(12vw);
+	@media(min-width: 768px){
+		font-size: 12px;
+	}
+	@media(min-width: 1282px){
+		font-size: getvw(12vw);
+	}
 }
 
 body, h1, h2, h3, h4, h5, h6, p, section, div, nav, ul, li, button{
