--- a/dev/scss/modules/_slider.scss
+++ b/dev/scss/modules/_slider.scss
@@ -7,7 +7,7 @@
 	width: 100%;
 	// height: 390px;
 	padding-bottom: 121.875%;
-	margin-bottom: 20px;
+	margin-bottom: getvwmob(20vw);
 
 	@media(min-width: 576px){
 		padding-bottom: 700px;
@@ -21,10 +21,10 @@
 		flex-direction: column;
 		justify-content: center;
 	}
-	// @media(min-width: 1282px){
-	// 	height: getvw(525vw);
-	// 	margin-bottom: getvw(10vw);
-	// }
+	@media(min-width: 1282px){
+		height: getvw(525vw);
+		margin-bottom: getvw(10vw);
+	}
 
 	.slider-cards-wrapper{
 		position: absolute;
@@ -35,9 +35,9 @@
 		@media(min-width: 768px){
 			height: 394px;
 		}
-		// @media(min-width: 1282px){
-		// 	height: getvw(394vw);
-		// }
+		@media(min-width: 1282px){
+			height: getvw(394vw);
+		}
 		.sliding-wrapper{
 			position: absolute;
 			width: max-content;
@@ -48,10 +48,6 @@
 				@include transitions-ease(.7s);
 			}
 		}
-
-		// .smooth-sliding{
-		// 	// @include transitions(transform, 0.7s, ease-in-out);
-		// }
 		.slide-container{
 			height: 100%;
 			width: 100vw;
